--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -8,12 +8,10 @@
     android:orientation="vertical">
 
 
-
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/recylerview"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        tools:listitem="@layout/sample_mainfood"
-        />
-        
+        tools:listitem="@layout/sample_mainfood" />
+
 </LinearLayout>
