--- a/app/src/main/res/layout/sample_mainfood.xml
+++ b/app/src/main/res/layout/sample_mainfood.xml
@@ -56,7 +56,7 @@
                         android:layout_height="wrap_content"
                         android:layout_marginLeft="12dp"
                         android:layout_weight="1"
-                        android:text="$"
+                        android:text="Rs."
                         android:textColor="#DA2E2E" />
 
                     <TextView
